software/assembler/lib/grammar/asm8085Parser.js
// Generated from ../libs/grammar/asm8085.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var asm8085Listener = require('./asm8085Listener').asm8085Listener;
var grammarFileName = "asm8085.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "':'", "'ACI'", "'ADC'", "'ADD'", "'ADI'", "'ANA'", 
                     "'ANI'", "'CALL'", "'CC'", "'CM'", "'CMA'", "'CMC'", 
                     "'CMP'", "'CNC'", "'CNZ'", "'CP'", "'CPE'", "'CPI'", 
                     "'CPO'", "'CZ'", "'DAA'", "'DAD'", "'DCR'", "'DCX'", 
                     "'DI'", "'EI'", "'HLT'", "'IN'", "'INR'", "'INX'", 
                     "'JC'", "'JM'", "'JMP'", "'JNC'", "'JNZ'", "'JP'", 
                     "'JPE'", "'JPO'", "'JZ'", "'LDA'", "'LDAX'", "'LHLD'", 
                     "'LXI'", "','", "'MOV'", "'MVI'", "'NOP'", "'ORA'", 
                     "'OUT'", "'PCHL'", "'POP'", "'PUSH'", "'RAL'", "'RAR'", 
                     "'RC'", "'RET'", "'RIM'", "'RLC'", "'RM'", "'RNC'", 
                     "'RNZ'", "'RP'", "'RPE'", "'RPO'", "'RRC'", "'RZ'", 
                     "'SBB'", "'SBI'", "'SHLD'", "'SIM'", "'SPHL'", "'STA'", 
                     "'STAX'", "'SUB'", "'SUI'", "'XCHG'", "'XRA'", "'XRI'", 
                     "'XTHL'", "'DB'", "'DS'", "'ORG'", "'SET'", "'$'", 
                     "'+'", "'-'", "'*'", "'/'", "'MOD'", "'('", "')'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, "REGISTER", "HEX", "OCT", "BIN", "DEC", 
                      "STR", "EOL", "LABEL", "COMMENT", "WS" ];

var ruleNames =  [ "prog", "line", "operation", "label", "comment", "instruction", 
                   "directive", "register", "labeloperand", "locationcounteroperand", 
                   "expressionlist", "expression", "multexpression", "parenexpression", 
                   "immediate", "hex", "oct", "bin", "dec", "str" ];

function asm8085Parser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

asm8085Parser.prototype = Object.create(antlr4.Parser.prototype);
asm8085Parser.prototype.constructor = asm8085Parser;

Object.defineProperty(asm8085Parser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

asm8085Parser.EOF = antlr4.Token.EOF;
asm8085Parser.T__0 = 1;
asm8085Parser.T__1 = 2;
asm8085Parser.T__2 = 3;
asm8085Parser.T__3 = 4;
asm8085Parser.T__4 = 5;
asm8085Parser.T__5 = 6;
asm8085Parser.T__6 = 7;
asm8085Parser.T__7 = 8;
asm8085Parser.T__8 = 9;
asm8085Parser.T__9 = 10;
asm8085Parser.T__10 = 11;
asm8085Parser.T__11 = 12;
asm8085Parser.T__12 = 13;
asm8085Parser.T__13 = 14;
asm8085Parser.T__14 = 15;
asm8085Parser.T__15 = 16;
asm8085Parser.T__16 = 17;
asm8085Parser.T__17 = 18;
asm8085Parser.T__18 = 19;
asm8085Parser.T__19 = 20;
asm8085Parser.T__20 = 21;
asm8085Parser.T__21 = 22;
asm8085Parser.T__22 = 23;
asm8085Parser.T__23 = 24;
asm8085Parser.T__24 = 25;
asm8085Parser.T__25 = 26;
asm8085Parser.T__26 = 27;
asm8085Parser.T__27 = 28;
asm8085Parser.T__28 = 29;
asm8085Parser.T__29 = 30;
asm8085Parser.T__30 = 31;
asm8085Parser.T__31 = 32;
asm8085Parser.T__32 = 33;
asm8085Parser.T__33 = 34;
asm8085Parser.T__34 = 35;
asm8085Parser.T__35 = 36;
asm8085Parser.T__36 = 37;
asm8085Parser.T__37 = 38;
asm8085Parser.T__38 = 39;
asm8085Parser.T__39 = 40;
asm8085Parser.T__40 = 41;
asm8085Parser.T__41 = 42;
asm8085Parser.T__42 = 43;
asm8085Parser.T__43 = 44;
asm8085Parser.T__44 = 45;
asm8085Parser.T__45 = 46;
asm8085Parser.T__46 = 47;
asm8085Parser.T__47 = 48;
asm8085Parser.T__48 = 49;
asm8085Parser.T__49 = 50;
asm8085Parser.T__50 = 51;
asm8085Parser.T__51 = 52;
asm8085Parser.T__52 = 53;
asm8085Parser.T__53 = 54;
asm8085Parser.T__54 = 55;
asm8085Parser.T__55 = 56;
asm8085Parser.T__56 = 57;
asm8085Parser.T__57 = 58;
asm8085Parser.T__58 = 59;
asm8085Parser.T__59 = 60;
asm8085Parser.T__60 = 61;
asm8085Parser.T__61 = 62;
asm8085Parser.T__62 = 63;
asm8085Parser.T__63 = 64;
asm8085Parser.T__64 = 65;
asm8085Parser.T__65 = 66;
asm8085Parser.T__66 = 67;
asm8085Parser.T__67 = 68;
asm8085Parser.T__68 = 69;
asm8085Parser.T__69 = 70;
asm8085Parser.T__70 = 71;
asm8085Parser.T__71 = 72;
asm8085Parser.T__72 = 73;
asm8085Parser.T__73 = 74;
asm8085Parser.T__74 = 75;
asm8085Parser.T__75 = 76;
asm8085Parser.T__76 = 77;
asm8085Parser.T__77 = 78;
asm8085Parser.T__78 = 79;
asm8085Parser.T__79 = 80;
asm8085Parser.T__80 = 81;
asm8085Parser.T__81 = 82;
asm8085Parser.T__82 = 83;
asm8085Parser.T__83 = 84;
asm8085Parser.T__84 = 85;
asm8085Parser.T__85 = 86;
asm8085Parser.T__86 = 87;
asm8085Parser.T__87 = 88;
asm8085Parser.T__88 = 89;
asm8085Parser.T__89 = 90;
asm8085Parser.T__90 = 91;
asm8085Parser.REGISTER = 92;
asm8085Parser.HEX = 93;
asm8085Parser.OCT = 94;
asm8085Parser.BIN = 95;
asm8085Parser.DEC = 96;
asm8085Parser.STR = 97;
asm8085Parser.EOL = 98;
asm8085Parser.LABEL = 99;
asm8085Parser.COMMENT = 100;
asm8085Parser.WS = 101;

asm8085Parser.RULE_prog = 0;
asm8085Parser.RULE_line = 1;
asm8085Parser.RULE_operation = 2;
asm8085Parser.RULE_label = 3;
asm8085Parser.RULE_comment = 4;
asm8085Parser.RULE_instruction = 5;
asm8085Parser.RULE_directive = 6;
asm8085Parser.RULE_register = 7;
asm8085Parser.RULE_labeloperand = 8;
asm8085Parser.RULE_locationcounteroperand = 9;
asm8085Parser.RULE_expressionlist = 10;
asm8085Parser.RULE_expression = 11;
asm8085Parser.RULE_multexpression = 12;
asm8085Parser.RULE_parenexpression = 13;
asm8085Parser.RULE_immediate = 14;
asm8085Parser.RULE_hex = 15;
asm8085Parser.RULE_oct = 16;
asm8085Parser.RULE_bin = 17;
asm8085Parser.RULE_dec = 18;
asm8085Parser.RULE_str = 19;

function ProgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8085Parser.RULE_prog;
    return this;
}

ProgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgContext.prototype.constructor = ProgContext;

ProgContext.prototype.EOL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(asm8085Parser.EOL);
    } else {
        return this.getToken(asm8085Parser.EOL, i);
    }
};


ProgContext.prototype.line = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LineContext);
    } else {
        return this.getTypedRuleContext(LineContext,i);
    }
};

ProgContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8085Listener ) {
        listener.enterProg(this);
	}
};

ProgContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8085Listener ) {
        listener.exitProg(this);
	}
};




asm8085Parser.ProgContext = ProgContext;

asm8085Parser.prototype.prog = function() {

    var localctx = new ProgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, asm8085Parser.RULE_prog);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 44; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 41;
            _la = this._input.LA(1);
            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << asm8085Parser.T__1) | (1 << asm8085Parser.T__2) | (1 << asm8085Parser.T__3) | (1 << asm8085Parser.T__4) | (1 << asm8085Parser.T__5) | (1 << asm8085Parser.T__6) | (1 << asm8085Parser.T__7) | (1 << asm8085Parser.T__8) | (1 << asm8085Parser.T__9) | (1 << asm8085Parser.T__10) | (1 << asm8085Parser.T__11) | (1 << asm8085Parser.T__12) | (1 << asm8085Parser.T__13) | (1 << asm8085Parser.T__14) | (1 << asm8085Parser.T__15) | (1 << asm8085Parser.T__16) | (1 << asm8085Parser.T__17) | (1 << asm8085Parser.T__18) | (1 << asm8085Parser.T__19) | (1 << asm8085Parser.T__20) | (1 << asm8085Parser.T__21) | (1 << asm8085Parser.T__22) | (1 << asm8085Parser.T__23) | (1 << asm8085Parser.T__24) | (1 << asm8085Parser.T__25) | (1 << asm8085Parser.T__26) | (1 << asm8085Parser.T__27) | (1 << asm8085Parser.T__28) | (1 << asm8085Parser.T__29) | (1 << asm8085Parser.T__30))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (asm8085Parser.T__31 - 32)) | (1 << (asm8085Parser.T__32 - 32)) | (1 << (asm8085Parser.T__33 - 32)) | (1 << (asm8085Parser.T__34 - 32)) | (1 << (asm8085Parser.T__35 - 32)) | (1 << (asm8085Parser.T__36 - 32)) | (1 << (asm8085Parser.T__37 - 32)) | (1 << (asm8085Parser.T__38 - 32)) | (1 << (asm8085Parser.T__39 - 32)) | (1 << (asm8085Parser.T__40 - 32)) | (1 << (asm8085Parser.T__41 - 32)) | (1 << (asm8085Parser.T__42 - 32)) | (1 << (asm8085Parser.T__44 - 32)) | (1 << (asm8085Parser.T__45 - 32)) | (1 << (asm8085Parser.T__46 - 32)) | (1 << (asm8085Parser.T__47 - 32)) | (1 << (asm8085Parser.T__48 - 32)) | (1 << (asm8085Parser.T__49 - 32)) | (1 << (asm8085Parser.T__50 - 32)) | (1 << (asm8085Parser.T__51 - 32)) | (1 << (asm8085Parser.T__52 - 32)) | (1 << (asm8085Parser.T__53 - 32)) | (1 << (asm8085Parser.T__54 - 32)) | (1 << (asm8085Parser.T__55 - 32)) | (1 << (asm8085Parser.T__56 - 32)) | (1 << (asm8085Parser.T__57 - 32)) | (1 << (asm8085Parser.T__58 - 32)) | (1 << (asm8085Parser.T__59 - 32)) | (1 << (asm8085Parser.T__60 - 32)) | (1 << (asm8085Parser.T__61 - 32)) | (1 << (asm8085Parser.T__62 - 32)))) !== 0) || ((((_la - 64)) & ~0x1f) == 0 && ((1 << (_la - 64)) & ((1 << (asm8085Parser.T__63 - 64)) | (1 << (asm8085Parser.T__64 - 64)) | (1 << (asm8085Parser.T__65 - 64)) | (1 << (asm8085Parser.T__66 - 64)) | (1 << (asm8085Parser.T__67 - 64)) | (1 << (asm8085Parser.T__68 - 64)) | (1 << (asm8085Parser.T__69 - 64)) | (1 << (asm8085Parser.T__70 - 64)) | (1 << (asm8085Parser.T__71 - 64)) | (1 << (asm8085Parser.T__72 - 64)) | (1 << (asm8085Parser.T__73 - 64)) | (1 << (asm8085Parser.T__74 - 64)) | (1 << (asm8085Parser.T__75 - 64)) | (1 << (asm8085Parser.T__76 - 64)) | (1 << (asm8085Parser.T__77 - 64)) | (1 << (asm8085Parser.T__78 - 64)) | (1 << (asm8085Parser.T__79 - 64)) | (1 << (asm8085Parser.T__80 - 64)) | (1 << (asm8085Parser.T__81 - 64)))) !== 0) || _la===asm8085Parser.LABEL || _la===asm8085Parser.COMMENT) {
                this.state = 40;
                this.line();
            }

            this.state = 43;
            this.match(asm8085Parser.EOL);
            this.state = 46; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << asm8085Parser.T__1) | (1 << asm8085Parser.T__2) | (1 << asm8085Parser.T__3) | (1 << asm8085Parser.T__4) | (1 << asm8085Parser.T__5) | (1 << asm8085Parser.T__6) | (1 << asm8085Parser.T__7) | (1 << asm8085Parser.T__8) | (1 << asm8085Parser.T__9) | (1 << asm8085Parser.T__10) | (1 << asm8085Parser.T__11) | (1 << asm8085Parser.T__12) | (1 << asm8085Parser.T__13) | (1 << asm8085Parser.T__14) | (1 << asm8085Parser.T__15) | (1 << asm8085Parser.T__16) | (1 << asm8085Parser.T__17) | (1 << asm8085Parser.T__18) | (1 << asm8085Parser.T__19) | (1 << asm8085Parser.T__20) | (1 << asm8085Parser.T__21) | (1 << asm8085Parser.T__22) | (1 << asm8085Parser.T__23) | (1 << asm8085Parser.T__24) | (1 << asm8085Parser.T__25) | (1 << asm8085Parser.T__26) | (1 << asm8085Parser.T__27) | (1 << asm8085Parser.T__28) | (1 << asm8085Parser.T__29) | (1 << asm8085Parser.T__30))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (asm8085Parser.T__31 - 32)) | (1 << (asm8085Parser.T__32 - 32)) | (1 << (asm8085Parser.T__33 - 32)) | (1 << (asm8085Parser.T__34 - 32)) | (1 << (asm8085Parser.T__35 - 32)) | (1 << (asm8085Parser.T__36 - 32)) | (1 << (asm8085Parser.T__37 - 32)) | (1 << (asm8085Parser.T__38 - 32)) | (1 << (asm8085Parser.T__39 - 32)) | (1 << (asm8085Parser.T__40 - 32)) | (1 << (asm8085Parser.T__41 - 32)) | (1 << (asm8085Parser.T__42 - 32)) | (1 << (asm8085Parser.T__44 - 32)) | (1 << (asm8085Parser.T__45 - 32)) | (1 << (asm8085Parser.T__46 - 32)) | (1 << (asm8085Parser.T__47 - 32)) | (1 << (asm8085Parser.T__48 - 32)) | (1 << (asm8085Parser.T__49 - 32)) | (1 << (asm8085Parser.T__50 - 32)) | (1 << (asm8085Parser.T__51 - 32)) | (1 << (asm8085Parser.T__52 - 32)) | (1 << (asm8085Parser.T__53 - 32)) | (1 << (asm8085Parser.T__54 - 32)) | (1 << (asm8085Parser.T__55 - 32)) | (1 << (asm8085Parser.T__56 - 32)) | (1 << (asm8085Parser.T__57 - 32)) | (1 << (asm8085Parser.T__58 - 32)) | (1 << (asm8085Parser.T__59 - 32)) | (1 << (asm8085Parser.T__60 - 32)) | (1 << (asm8085Parser.T__61 - 32)) | (1 << (asm8085Parser.T__62 - 32)))) !== 0) || ((((_la - 64)) & ~0x1f) == 0 && ((1 << (_la - 64)) & ((1 << (asm8085Parser.T__63 - 64)) | (1 << (asm8085Parser.T__64 - 64)) | (1 << (asm8085Parser.T__65 - 64)) | (1 << (asm8085Parser.T__66 - 64)) | (1 << (asm8085Parser.T__67 - 64)) | (1 << (asm8085Parser.T__68 - 64)) | (1 << (asm8085Parser.T__69 - 64)) | (1 << (asm8085Parser.T__70 - 64)) | (1 << (asm8085Parser.T__71 - 64)) | (1 << (asm8085Parser.T__72 - 64)) | (1 << (asm8085Parser.T__73 - 64)) | (1 << (asm8085Parser.T__74 - 64)) | (1 << (asm8085Parser.T__75 - 64)) | (1 << (asm8085Parser.T__76 - 64)) | (1 << (asm8085Parser.T__77 - 64)) | (1 << (asm8085Parser.T__78 - 64)) | (1 << (asm8085Parser.T__79 - 64)) | (1 << (asm8085Parser.T__80 - 64)) | (1 << (asm8085Parser.T__81 - 64)))) !== 0) || ((((_la - 98)) & ~0x1f) == 0 && ((1 << (_la - 98)) & ((1 << (asm8085Parser.EOL - 98)) | (1 << (asm8085Parser.LABEL - 98)) | (1 << (asm8085Parser.COMMENT - 98)))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8085Parser.RULE_line;
    return this;
}

LineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LineContext.prototype.constructor = LineContext;

LineContext.prototype.comment = function() {
    return this.getTypedRuleContext(CommentContext,0);
};

LineContext.prototype.operation = function() {
    return this.getTypedRuleContext(OperationContext,0);
};

LineContext.prototype.label = function() {
    return this.getTypedRuleContext(LabelContext,0);
};

LineContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8085Listener ) {
        listener.enterLine(this);
	}
};

LineContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8085Listener ) {
        listener.exitLine(this);
	}
};




asm8085Parser.LineContext = LineContext;

asm8085Parser.prototype.line = function() {

    var localctx = new LineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, asm8085Parser.RULE_line);
    try {
        this.state = 51;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 48;
            this.comment();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 49;
            this.operation();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 50;
            this.label();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OperationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8085Parser.RULE_operation;
    return this;
}

OperationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OperationContext.prototype.constructor = OperationContext;

OperationContext.prototype.instruction = function() {
    return this.getTypedRuleContext(InstructionContext,0);
};

OperationContext.prototype.directive = function() {
    return this.getTypedRuleContext(DirectiveContext,0);
};

OperationContext.prototype.label = function() {
    return this.getTypedRuleContext(LabelContext,0);
};

OperationContext.prototype.comment = function() {
    return this.getTypedRuleContext(CommentContext,0);
};

OperationContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8085Listener ) {
        listener.enterOperation(this);
	}
};

OperationContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8085Listener ) {
        listener.exitOperation(this);
	}
};




asm8085Parser.OperationContext = OperationContext;

asm8085Parser.prototype.operation = function() {

    var localctx = new OperationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, asm8085Parser.RULE_operation);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 54;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        if(la_===1) {
            this.state = 53;
            this.label();

        }
        this.state = 58;
        switch(this._input.LA(1)) {
        case asm8085Parser.T__1:
        case asm8085Parser.T__2:
        case asm8085Parser.T__3:
        case asm8085Parser.T__4:
        case asm8085Parser.T__5:
        case asm8085Parser.T__6:
        case asm8085Parser.T__7:
        case asm8085Parser.T__8:
        case asm8085Parser.T__9:
        case asm8085Parser.T__10:
        case asm8085Parser.T__11:
        case asm8085Parser.T__12:
        case asm8085Parser.T__13:
        case asm8085Parser.T__14:
        case asm8085Parser.T__15:
        case asm8085Parser.T__16:
        case asm8085Parser.T__17:
        case asm8085Parser.T__18:
        case asm8085Parser.T__19:
        case asm8085Parser.T__20:
        case asm8085Parser.T__21:
        case asm8085Parser.T__22:
        case asm8085Parser.T__23:
        case asm8085Parser.T__24:
        case asm8085Parser.T__25:
        case asm8085Parser.T__26:
        case asm8085Parser.T__27:
        case asm8085Parser.T__28:
        case asm8085Parser.T__29:
        case asm8085Parser.T__30:
        case asm8085Parser.T__31:
        case asm8085Parser.T__32:
        case asm8085Parser.T__33:
        case asm8085Parser.T__34:
        case asm8085Parser.T__35:
        case asm8085Parser.T__36:
        case asm8085Parser.T__37:
        case asm8085Parser.T__38:
        case asm8085Parser.T__39:
        case asm8085Parser.T__40:
        case asm8085Parser.T__41:
        case asm8085Parser.T__42:
        case asm8085Parser.T__44:
        case asm8085Parser.T__45:
        case asm8085Parser.T__46:
        case asm8085Parser.T__47:
        case asm8085Parser.T__48:
        case asm8085Parser.T__49:
        case asm8085Parser.T__50:
        case asm8085Parser.T__51:
        case asm8085Parser.T__52:
        case asm8085Parser.T__53:
        case asm8085Parser.T__54:
        case asm8085Parser.T__55:
        case asm8085Parser.T__56:
        case asm8085Parser.T__57:
        case asm8085Parser.T__58:
        case asm8085Parser.T__59:
        case asm8085Parser.T__60:
        case asm8085Parser.T__61:
        case asm8085Parser.T__62:
        case asm8085Parser.T__63:
        case asm8085Parser.T__64:
        case asm8085Parser.T__65:
        case asm8085Parser.T__66:
        case asm8085Parser.T__67:
        case asm8085Parser.T__68:
        case asm8085Parser.T__69:
        case asm8085Parser.T__70:
        case asm8085Parser.T__71:
        case asm8085Parser.T__72:
        case asm8085Parser.T__73:
        case asm8085Parser.T__74:
        case asm8085Parser.T__75:
        case asm8085Parser.T__76:
        case asm8085Parser.T__77:
        case asm8085Parser.T__78:
            this.state = 56;
            this.instruction();
            break;
        case asm8085Parser.T__79:
        case asm8085Parser.T__80:
        case asm8085Parser.T__81:
        case asm8085Parser.LABEL:
            this.state = 57;
            this.directive();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 61;
        _la = this._input.LA(1);
        if(_la===asm8085Parser.COMMENT) {
            this.state = 60;
            this.comment();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LabelContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8085Parser.RULE_label;
    return this;
}

LabelContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LabelContext.prototype.constructor = LabelContext;

LabelContext.prototype.LABEL = function() {
    return this.getToken(asm8085Parser.LABEL, 0);
};

LabelContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8085Listener ) {
        listener.enterLabel(this);
	}
};

LabelContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8085Listener ) {
        listener.exitLabel(this);
	}
};




asm8085Parser.LabelContext = LabelContext;

asm8085Parser.prototype.label = function() {

    var localctx = new LabelContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, asm8085Parser.RULE_label);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        this.match(asm8085Parser.LABEL);
        this.state = 64;
        this.match(asm8085Parser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CommentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8085Parser.RULE_comment;
    return this;
}

CommentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CommentContext.prototype.constructor = CommentContext;

CommentContext.prototype.COMMENT = function() {
    return this.getToken(asm8085Parser.COMMENT, 0);
};

CommentContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8085Listener ) {
        listener.enterComment(this);
	}
};

CommentContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8085Listener ) {
        listener.exitComment(this);
	}
};




asm8085Parser.CommentContext = CommentContext;

asm8085Parser.prototype.comment = function() {

    var localctx = new CommentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, asm8085Parser.RULE_comment);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 66;
        this.match(asm8085Parser.COMMENT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8085Parser.RULE_instruction;
    return this;
}

InstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InstructionContext.prototype.constructor = InstructionContext;
